# Industry-CrewAI

./: Pipfile  README.md
chat_flow/: README.md  pyproject.toml
chat_flow/src/chat_flow/: main.py
chat_flow/src/chat_flow/crews/industry_crew/: industry_crew.py
chat_flow/src/chat_flow/crews/industry_crew/config/: agents.yaml  tasks.yaml
chat_flow/src/chat_flow/crews/website_crew/: website_crew.py
chat_flow/src/chat_flow/crews/website_crew/config/: agents.yaml  tasks.yaml
chat_flow/src/chat_flow/db/: chroma.sqlite3
chat_flow/src/chat_flow/states/: chat_state.py
chat_flow/src/chat_flow/tools/: website_scraper.py  website_urls.py
industry_crew/: README.md  pyproject.toml
industry_crew/db/: chroma.sqlite3
industry_crew/src/industry_crew/: crew.py  main.py
industry_crew/src/industry_crew/config/: agents.yaml  tasks.yaml
