[project]
name = "industry_crew"
version = "0.1.0"
description = "industry-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
industry_crew = "industry_crew.main:run"
run_crew = "industry_crew.main:run"
train = "industry_crew.main:train"
replay = "industry_crew.main:replay"
test = "industry_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
